WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146514
Ignore Visual Studio warning in SegmentedVector
https://bugs.webkit.org/show_bug.cgi?id=146514
Summary
Ignore Visual Studio warning in SegmentedVector
Alex Christensen
Reported
2015-07-01 09:35:49 PDT
SegmentedVector intentionally has an array of size 0. This is creating a lot of C4200 warnings making the build logs hard to read and find real errors. Let's hide this warning locally so we can still find problems elsewhere.
Attachments
Patch
(1.09 KB, patch)
2015-07-01 09:37 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(1.14 KB, patch)
2015-07-01 12:03 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2015-07-01 09:37:02 PDT
Created
attachment 255924
[details]
Patch
Darin Adler
Comment 2
2015-07-01 09:41:00 PDT
Comment on
attachment 255924
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=255924&action=review
> Source/WTF/wtf/SegmentedVector.h:192 > +#pragma warning(push) > +#pragma warning(disable: 4200) > T entries[0]; > +#pragma warning(pop)
Need to wrap #pragma in appropriate #if.
Alex Christensen
Comment 3
2015-07-01 12:03:43 PDT
Created
attachment 255943
[details]
Patch
WebKit Commit Bot
Comment 4
2015-07-01 17:08:49 PDT
Comment on
attachment 255943
[details]
Patch Clearing flags on attachment: 255943 Committed
r186207
: <
http://trac.webkit.org/changeset/186207
>
WebKit Commit Bot
Comment 5
2015-07-01 17:08:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug