Ignore Visual Studio warning in SegmentedVector https://bugs.webkit.org/show_bug.cgi?id=146514

Patch by Alex Christensen <achristensen@webkit.org> on 2015-07-01
Reviewed by Andreas Kling.

* wtf/SegmentedVector.h:
(WTF::SegmentedVector::deleteAllSegments):
Use pragmas to ignore the 0 element array warning.

Canonical link: https://commits.webkit.org/164621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186207 268f45cc-cd09-0410-ab3c-d52691b4dbfc